# tree-sitter-earthfile

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.jsonc  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
.helix/: languages.toml
bindings/c/: tree-sitter-earthfile.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/: some_test.py
bindings/python/tests/: test_basic.py  test_binding.py
bindings/python/tree_sitter_earthfile/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEarthfile/: earthfile.h
bindings/swift/TreeSitterEarthfileTests/: TreeSitterEarthfileTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: parse.sh
test/corpus/: arg.txt  build.txt  cache.txt  cmd.txt  copy.txt  do.txt  entrypoint.txt  env.txt  expose.txt  for.txt  from.txt  from_dockerfile.txt  git_clone.txt  host.txt  if.txt  import.txt  label.txt  let.txt  project.txt  run.txt  save_artifact.txt  save_image.txt  set.txt  target.txt  try.txt  user.txt  version.txt  volume.txt  wait.txt  with_docker.txt  workdir.txt
test/earthly/: Earthfile
test/earthly/doc2/Version-specific-features/: Difference-between-the-Earthly-binary-version-and-the-Earthfile-version.md
test/earthly/examples/bazel/: Earthfile
test/earthly/tests/: Earthfile
test/earthly/tests/do-not-track/: Earthfile
test/earthly/tests/functions-do-not-propagate-args/: Earthfile
test/earthly/tests/oidc/: Earthfile
test/earthly/tests/try-catch/try-catch-not-currently-implemented/: Earthfile
test/earthly/tests/wait-block/no-output/: Earthfile
test/earthly/tests/with-docker-expose/: Earthfile
xtask/: Cargo.toml
