[package]
name = "tree-sitter-earthfile"
description = "earthfile grammar for the tree-sitter parsing library"
version.workspace = true
keywords = ["incremental", "parsing", "earthfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/glehmann/tree-sitter-earthfile"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.4.2"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.1"

[build-dependencies]
cc = "1.0"
