[package]
name = "tree-sitter-earthfile"
description = "earthfile grammar for the tree-sitter parsing library"
version.workspace = true
keywords = ["incremental", "parsing", "earthfile"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/glehmann/tree-sitter-earthfile"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[workspace]
members = ["xtask"]

[workspace.package]
version = "0.5.4"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[dev-dependencies]
tree-sitter = "0.25.1"

[build-dependencies]
cc = "1.0"
